fix(spring-cluster): address PR review (thread safety, 404 mapping, shell guards)
- volatile ArcadeDBServer field for cross-thread visibility
- explicit null check in HealthController.databaseReachable
- map NoSuchElementException to 404 in RecommendationController (+IT)
- use .toList() in embeddingOf; include the lookup key in its message
- guard curl|jq leader polls in start.sh/test.sh against pipefail aborts

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>